force-app/main/default/objects/Performance_Review__c/Performance_Review__c.object-meta.xml
<CustomObject>
    <label>Peer Review</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Peer Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Peer Review</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>