force-app/main/default/objects/Performance_Review__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <label>Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Communication Skills</fullName>
            </value>
            <value>
                <fullName>Teamwork</fullName>
            </value>
            <value>
                <fullName>Productivity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>