force-app/main/default/objects/Performance_Review__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Provide clear, constructive, and actionable feedback. Focus on the employee&apos;s performance, strengths, and areas for improvement.</inlineHelpText>
    <label>Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>